--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="img/slider4.jpg" rel="icon" type="image/png">
     <link rel="stylesheet" href="plugins/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
