--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="first-slide" src="img/slider1.jpg" alt="Python Book" title="Books from bootstap">
+                            <img class="first-slide" src="img/slider1.jpg" alt="Python Book" title="slider">
                             <div class="carousel-container">
                                 <div class="carousel-caption">
                                     <h4 class="curs">The Best business Information</h4>
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="first-slide" src="img/slider5.jpg" alt="Python Book" title="Books from bootstap">
+                            <img class="first-slide" src="img/slider5.jpg" alt="Python Book" title="slider">
                             <div class="carousel-container">
                                 <div class="carousel-caption align-the-text">
                                     <h4 class="curs">The Best business Information</h4>
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="first-slide" src="img/slider3.jpg" alt="Python Book" title="Books from bootstap">
+                            <img class="first-slide" src="img/slider3.jpg" alt="Python Book" title="slider">
                             <div class="carousel-container">
                                 <div class="carousel-caption align-the-text">
                                     <h4 class="curs">The Best business Information</h4>
