--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="first-slide" src="img/slider5.jpg" alt="Python Book" title="slider">
+                            <img class="first-slide" src="img/Slider5.jpg" alt="Python Book" title="slider">
                             <div class="carousel-container">
                                 <div class="carousel-caption align-the-text">
                                     <h4 class="curs">The Best business Information</h4>
